- bring output structure out of gemc
- bring options out of gemc
- bring graph out of gemc
- bring splash screen out of gemc
- "ahit" general function to get infos (with auto, c++11) getVector(string), get3Vector(string)
- remove obsolete cpp materials

- add cosmic_beam option
- production cut / threshold valid for the whole system

10/30/15
- detector: added explicit optimization in the constructor
- default cut coming from PRODUCTIONCUT flag now instead of being hardcoded. Default value is 1cm
- output: added nsteps in the true info banks
- added system in the sensitive detector class
- production cut will now affect all volumes in a system rather than just the sensitive volumes
- better verbosity for event action
- default material reverted to vacuum


10/21/15
- typo fixed in htcc hit process

10/20/15
- merged from Nick: added time infos to htcc routine

10/2/15
- fixed bst energy sharing routine.
- added bonus hit process routine

8/6/15
- overloaded get_info with extra argument: fixed bug that affected particles that 
  contain parenthesis in the name. Volker found this one after 5 minutes of playing with the code!

7/28/15
- fixed number of material entries for devel (rayleigh makes it 18 not 17)
- fixed typo on materials api

7/24/15
- added rayleigh property in materials api and material factory

7/15/15
- fixed processName routine, sometimes the trk->GetCreatorProcess() is null
- added warning suppressor for compiling on Mac
- added gemc version on the log

6/10/15
- fixed mysql material query, it was not getting the optical info

6/4/15
- added process name and material name in the Hit class
- saving process and material names in the Hit class from SensitiveDetector.cc

6/2/15
- fix: setting run number at each event instead of only with message log

5/28/15
- added unsmeared and smeard tdc for clas12 ftof

5/26/15
- improved log for LUND format
- added runWeights class. This class reads a text file with two columns: run and weight